updating the language on homepage

--- a/index.html
+++ b/index.html
@@ -76,30 +76,26 @@
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">
-   <!-- <div class="container">
-      <div class="row justify-content-center">
-      <a class="row justify-content-center" href="https://ndi.org">
-        <img class="nav-logo" alt="National Democratic Institute " src="img/nditranslogo.png" /></a>
-      </div>
+    <div class="container">
+      <h1 class="mx-auto text-center">INTERNATIONAL LEADERS FORUM (ILF)</h1>
+      <h2 class="mx-auto text-center">December 19-22 </h2>
+      <h3 class="mx-auto text-center">Chicago, Illinois</h3>
       
       <div>
+      <p> Democracy is taking center stage in 2024 as over 64 nations, including the United States, gear up for significant electoral events. This marks a crucial moment where diverse societies actively participate in shaping their political landscape through major elections. The International Leaders Forum 2024 (ILF) is the only forum where leaders of the international community can observe the dynamic workings of U.S. democracy in action.</p>
       <p>
-        <a class="row justify-content-center mx-auto text-center text-black "href="https://ndi.org" style="margin-top: 5px; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #053967; font-size: 1.5rem; text-decoration: underline;"> www.NDI.org</a></p>
+        Every four years since 1984, the National Democratic Institute (NDI) convenes hundreds of senior politicians and policymakers worldwide. This year, ILF will take place in Chicago, August 19-22, 2024, on the sidelines of the Democratic National Convention. Participants will observe the Convention, participate in panels and other learning opportunities, and build relationships as they address pressing challenges to democracy and share ideas.
+      </p>
+        <!--<a class="row justify-content-center mx-auto text-center text-black "href="https://ndi.org" style="margin-top: 5px; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #053967; font-size: 1.5rem; text-decoration: underline;"> www.NDI.org</a></p>-->
+        <div class="row justify-content-center">
+          <a class="row justify-content-center" href="https://ndi.org">
+            <img class="nav-logo" alt="National Democratic Institute " src="img/nditranslogo.png" /></a>
+          </div><br>
+        <p class="mx-auto text-center">ILF is presented by the National Democratic Institute</p>
+        <p class="mx-auto text-center"><i>NDI is a non-profit, non-partisan, non-governmental organization that works in partnership around the world to strengthen and safeguard democratic institutions, processes, norms and values to secure a better quality of life for all. NDI envisions a world where democracy and freedom prevail, with dignity for all.</i></p>
     </div>
-      <div class="row justify-content-center">
 
-       <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <span class="fas fa-map-marked-alt text-primary mb-2"></span>
-              <h4 class="text-uppercase m-0">Address</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">455 Massachusetts Ave NW,<br> Washington, DC 20001</div>
-            </div>
-          </div>
-        </div>
-
-       <div class="col-md-4 mb-3 mb-md-0">
+       <!--<div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <span class="fas fa-envelope text-primary mb-2"></span>
@@ -111,9 +107,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
 
-        <div class="col-md-4 mb-3 mb-md-0">
+      <!--  <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <h3 class="text-uppercase m-0">Contact</h3> 
