Updated About and agenda page with new updates from Susan

--- a/about.html
+++ b/about.html
@@ -61,20 +61,62 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p class="text-black"><b>WHAT IS THE INTERNATIONAL LEADERS FORUM?</b></p>
-          <p class="text-black-50">NDI is honored to host the 11th International Leaders Forum (ILF) on the sidelines of the Democratic National Convention proceedings in Chicago, Illinois August 19-22, 2024. Every four years since 1984, the Institute convenes senior politicians and policy makers from around the world to observe an important facet of the American democratic process. This global gathering also serves as an opportunity for leaders across diverse ideologies and geographies to build relationships based on their shared experiences, and identify common interests as they address pressing challenges to democratic institutions, values and norms.</p>
-          <p class="text-black"><b>WHAT IS THE NATIONAL DEMOCRATIC INSTITUTE?</b></p> 
-          <p class="text-black-50">NDI is a non-profit, non-partisan, non-governmental organization that works in partnership around the world to strengthen and safeguard democratic institutions, processes, norms and values to secure a better quality of life for all. NDI envisions a world where democracy and freedom prevail, with dignity for all. NDI receives no funding from any political party and is not affiliated with the Democratic Party.
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/cOXzBTKswrs?si=wdvdX2v66k173ItP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <br>
+          <p class="text-black">NDI is honored to host the 11th International Leaders Forum (ILF) on the sidelines of the Democratic National Convention proceedings in Chicago, Illinois August 19-22, 2024. Every four years since 1984, the Institute convenes senior politicians and policy-makers from around the world to observe an important facet of the American democratic process. </p>
+          <p class="text-black">This global gathering also serves as an opportunity for leaders across diverse ideologies and geographies to build relationships based on their shared experiences, and identify common interests as they address pressing challenges to democratic institutions, values and norms.
+          </p> 
+          <p class="text-black">While ILF will occur adjacent to the Democratic National Convention, NDI is a non-partisan organization and ILF's participation in the Convention is meant to be illustrative of the convention experience in the U.S. election system, not an endorsement of a particular candidate or political party.
           </p>
-          <p class="text-black"><b>WHEN AND WHERE IS ILF?</b></p> 
-          <p class="text-black-50">The 2024 ILF will be held in Chicago, Illinois August 18-22.
+          <p class="text-black"><b><h1>Attendees</h1></b></p> 
+          <p class="text-black">ILF is by invitation only and attendees represent a broad spectrum of political thought, hailing from democracies — established and burgeoning — from all corners of the globe. From heads of state, cabinet ministers, ambassadors, and Members of Parliament, to political party officials and leading policymakers. ILF is a unique gathering of thought leaders and influencers shaping democratic institutions, values, and practice.
           </p>
-          <p class="text-black"><b>WHO IS INVITED?</b></p> 
-            <p class="text-black-50">Invitees include members of Parliament, political party leaders, ministers, and other international partners from the countries where NDI operates.
-          </p>
+          <p class="text-black">Leaders will hail from every region of the world. For example, in 2016 (the last in-person ILF), a cross-section of attendees were from countries such as:
+            <ul class="about-list">
+              <li>Albania </li>
+              <li>Angola </li>
+              <li>Armenia </li>
+              <li>Bangladesh </li>
+              <li>Bolivia  </li>
+              <li>Bosnia & Herzegovina </li>
+              <li>Burkina Faso</li>
+              <li>Canada </li>
+              <li> Columbia</li>
+              <li>Costa Rica</li>  
+              <li>Côte d'Ivoire</li>
+              <li>Democratic Republic of Congo</li>
+              <li>Denmark</li>
+              <li>European Union</li>
+              <li>Finland</li>
+              <li>Georgia</li>
+              <li>Ghana</li>
+              <li>Iraq</li>
+              <li>Ireland </li>
+              <li>Japan </li>
+              <li>Kenya </li>
+              <li>Kosovo </li>
+              <li>Mexico</li>
+              <li>Mozambique</li>
+              <li>Netherlands</li>
+              <li>New Zealand</li>
+              <li>Nicaragua</li>
+              <li>Nigeria</li>
+              <li>North Macedonia</li>
+              <li>Paraguay</li>
+              <li>Peru</li>
+              <li>Romania</li>
+              <li>Senegal</li>
+              <li>Serbia</li>
+              <li>Spain</li>
+              <li>Sweden</li>
+              <li>Ukraine</li>
+              <li>United Kingdom</li>
+              <li>Zambia</li>
+            </ul>
+         
          </div>
        </div>
-      <!--<img src="img/ipad.png" class="img-fluid" alt="">-->
+  
     </div>
   </section>
 
@@ -107,17 +149,17 @@
               </div>
             </div>
           </div>
-        </div>-->
+        </div>
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <h3 class="text-uppercase m-0">Contact</h3> 
-              <!--<hr class="my-4">-->
+              <hr class="my-4">
               <h5 class="small text-black-50"><br>Chief Development Officer</h5>
               <div class="small text-black-50">202-728-5516 <br>development@ndi.org</div>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
 
       <div class="social d-flex justify-content-center">
