created a new page for nextgen

--- a/sponsors.html
+++ b/sponsors.html
@@ -44,6 +44,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger active-page" href="sponsors.html">Sponsors</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="nextgen.html">NextGen</a>
+          </li>
         </ul>
       </div>
     </div>
