fixed the button on Nextgen page

--- a/nextgen.html
+++ b/nextgen.html
@@ -97,8 +97,11 @@
         <h2 class="mx-auto text-center">Support the Next Generation of Leaders</h2>
         <p class="mx-auto">Your sponsorship of a Next Generation Leader will allow that leader to attend ILF and reap the vast benefits of learning, collaborating and networking with established leaders from the global democracy community well into the future.</p>
         <p class="mx-auto">In addition to building democratic leaders, your Next Generation Leaders sponsorship will provide attendance and recognition at the Next Generation Leaders Lunch, prominent signage and table placement, other promotional and networking opportunities as well as an opportunity to meet with the full cohort of leaders.</p>
+    
+        <div class="text-center">
+            <a href="https://drive.google.com/file/d/1FQpqR8YBmll3DNgyrkTUWtoL5skBI6ic/view?usp=drive_link" class="btn btn-primary nextgen-btn js-scroll-trigger">Learn More</a></div>
     </div>
-    <a href="https://drive.google.com/file/d/1FQpqR8YBmll3DNgyrkTUWtoL5skBI6ic/view?usp=drive_link" class="btn btn-primary learn-btn js-scroll-trigger">Learn More</a>
+
 
        <!--<div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
