centered embedded video and created a 3 column list for the countries

--- a/sponsors.html
+++ b/sponsors.html
@@ -77,7 +77,8 @@
         <div class="col-sm-5">
           <img class="img-fluid" src="img/swiss.png" alt="Swiss logo" id="sponsor"> 
         </div> 
-      </div>
+        </div>
+        <h2>Interested in Sponsoring ILF 2024? </h2>
       </div>
     </section>   
 
