--- a/about.html
+++ b/about.html
@@ -64,17 +64,23 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
+          <div class="about-vid">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/cOXzBTKswrs?si=wdvdX2v66k173ItP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
           <br>
           <p class="text-black">NDI is honored to host the 11th International Leaders Forum (ILF) on the sidelines of the Democratic National Convention proceedings in Chicago, Illinois August 19-22, 2024. Every four years since 1984, the Institute convenes senior politicians and policy-makers from around the world to observe an important facet of the American democratic process. </p>
           <p class="text-black">This global gathering also serves as an opportunity for leaders across diverse ideologies and geographies to build relationships based on their shared experiences, and identify common interests as they address pressing challenges to democratic institutions, values and norms.
           </p> 
           <p class="text-black">While ILF will occur adjacent to the Democratic National Convention, NDI is a non-partisan organization and ILF's participation in the Convention is meant to be illustrative of the convention experience in the U.S. election system, not an endorsement of a particular candidate or political party.
           </p>
-          <p class="text-black"><b><h1>Attendees</h1></b></p> 
+          <h1 class="mx-auto text-center">Attendees</h1>
           <p class="text-black">ILF is by invitation only and attendees represent a broad spectrum of political thought, hailing from democracies — established and burgeoning — from all corners of the globe. From heads of state, cabinet ministers, ambassadors, and Members of Parliament, to political party officials and leading policymakers. ILF is a unique gathering of thought leaders and influencers shaping democratic institutions, values, and practice.
           </p>
-          <p class="text-black">Leaders will hail from every region of the world. For example, in 2016 (the last in-person ILF), a cross-section of attendees were from countries such as:
+          
+          <p class="mx-auto text-black">Leaders will hail from every region of the world. For example, in 2016 (the last in-person ILF), a cross-section of attendees were from countries such as:</p>
+
+            <div class="country-list-container">
+            <div class="country-column">
             <ul class="about-list">
               <li>Albania </li>
               <li>Angola </li>
@@ -89,6 +95,10 @@
               <li>Côte d'Ivoire</li>
               <li>Democratic Republic of Congo</li>
               <li>Denmark</li>
+            </ul>  
+            </div>
+            <div class="country-column">
+            <ul class="about-list">
               <li>European Union</li>
               <li>Finland</li>
               <li>Georgia</li>
@@ -102,6 +112,10 @@
               <li>Mozambique</li>
               <li>Netherlands</li>
               <li>New Zealand</li>
+            </ul>
+            </div>
+            <div class="country-column">
+            <ul class="about-list">
               <li>Nicaragua</li>
               <li>Nigeria</li>
               <li>North Macedonia</li>
@@ -116,7 +130,9 @@
               <li>United Kingdom</li>
               <li>Zambia</li>
             </ul>
-         
+            </div>
+            </div>
+          </div>
          </div>
        </div>
   
