Adjusted video and created 3 columns for the country line items;

--- a/about.html
+++ b/about.html
@@ -55,15 +55,16 @@
   <!-- Header -->
   <header class="child-header">
       <div class="text-center">
-        <h1 class="text-white mx-auto title-spacer text-uppercase">About</h1>
+        <h1 class="text-white mx-auto title-spacer text-uppercase">About ILF</h1>
       </div>
-  </header>
+  </header> 
 
   <!-- About Page Section -->
   <section id="about-page">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
+          
           <div class="about-vid">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/cOXzBTKswrs?si=wdvdX2v66k173ItP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
