updating footer region with contact info

--- a/about.html
+++ b/about.html
@@ -199,6 +199,9 @@
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-black">
+    <div> 
+      <div class="med text-black">Chief Development Officer &#183;202-728-5516 &#183;development.mail@ndi.org</div>
+    </div>
     <div class="container">
       Copyright &copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
