--- a/agenda.html
+++ b/agenda.html
@@ -63,7 +63,7 @@
  
     <div class="container">
  <!--<h2>More information on ILF 2024 coming soon</h2>-->
-
+     <p class="mx-auto text-center">Attendees at ILF2024 will participate in a robust agenda that includes panels, networking opportunities, and specialized luncheons, capped off with an evening watch party and direct observation of Convention proceedings. All event venues are situated near the United Center and DNC daytime activities at McCormick Place convention center.</p>
   <!-- PAST Agenda Section -->
     
     <section class="container agenda-box">    
@@ -230,6 +230,9 @@
 
   <!-- Footer -->
   <footer class="small text-center text-black">
+    <div> 
+      <div class="med text-black">Chief Development Officer &#183;202-728-5516 &#183;development.mail@ndi.org</div>
+    </div>
     <div class="container">
       Copyright &copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
