resized sponsor logos and added required text/button

--- a/attendees.html
+++ b/attendees.html
@@ -75,7 +75,7 @@
       <div>
         <!--<div class="nextgen">
         <img class="nav-logo" alt="National Democratic Institute " src="img/NGLI_Image.png" /></div>-->
-      <p class="mx-auto"> Attendance at ILF is by NDI invitation only.
+      <p class="mx-auto text-center"> Attendance at ILF is by NDI invitation only.
     </p>
      
         <!--<a class="row justify-content-center mx-auto text-center text-black "href="https://ndi.org" style="margin-top: 5px; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #053967; font-size: 1.5rem; text-decoration: underline;"> www.NDI.org</a></p>-->
