--- a/sponsors.html
+++ b/sponsors.html
@@ -44,6 +44,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger active-page" href="sponsors.html">Sponsors</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="nextgen.html">NextGen</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -62,24 +65,36 @@
  
       <!-- Sponsors One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <img class="img-fluid" src="img/austrianNew.png" alt="Austrian logo" id="sponsor">
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <img class="img-fluid" src="img/brusselsNew.png" alt="Brussels logo" id="sponsor">
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <img class="img-fluid" src="img/eurowings.png" alt="Eurowings logo" id="sponsor">
         </div> 
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <img class="img-fluid" src="img/lufthansa.png" alt="Lufthansa logo" id="sponsor">
         </div> 
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <img class="img-fluid" src="img/swiss.png" alt="Swiss logo" id="sponsor"> 
         </div> 
         </div>
-        <h2>Interested in Sponsoring ILF 2024? </h2>
       </div>
+      <div class="container">
+        <h2 class="mx-auto text-center">Interested in Sponsoring ILF 2024? </h2>
+      <p class="text-black">The International Leaders Forum 2024 (ILF) is the only forum where leaders of the international community can observe the dynamic workings of U.S. democracy in action.</p>
+      <p class="text-black">This gathering of global leaders is a rare opportunity to interface with such a broadly diverse set of stakeholders, thought leaders, and decision-makers. National and global corporations and organizations such as yours will have the chance to engage with the very people responsible for economic and political decision-making, creating global opportunities, and supporting democratic values.</p>
+      <p class="text-black">Join NDI and the international community as we further democracy through observation, reflection, and dialogue.</p>
+      <p class="text-black">While ILF will occur adjacent to the Democratic National Convention, NDI is a non-partisan organization and ILF's participation in the Convention is meant to be illustrative of the convention experience in the U.S. election system, not an endorsement of a particular candidate or political party. </p>
+
+      <div class="text-center">
+        <a href="https://drive.google.com/file/d/1W8JwgrlkDejheCa4V-0h0mFZf0W3p5R_/view?usp=drive_link" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
+
+        <p class="text-white head-text"><i>For more information on sponsorship options and benefits, contact Janella Ferguson, NDI Chief Development Officer at ilf2024@ndi.org.</i></p>
+      </div>
+
     </section>   
 
   <!-- Contact Section -->
