emphasized the invite only and changed the size

--- a/attendees.html
+++ b/attendees.html
@@ -70,7 +70,7 @@
   <section class="contact-section bg-black">
     <div class="container">
    
-      <p class="mx-auto text-center"> Attendance at ILF is by NDI invitation only.</p>
+      <p class="mx-auto text-center"> <h4 class="mx-auto text-center"><i>Attendance at ILF is by NDI invitation only.</i></h4></p>
              
         <p class="mx-auto text-center"><h2 class="mx-auto text-center">Your registration covers -</h2>
             <ul class="mx-auto">
