made changes to all pages, fixed spacing and alignment for titles and updated button links

--- a/about.html
+++ b/about.html
@@ -133,7 +133,10 @@
             </ul>
             </div>
             </div>
+            <div class="text-center">
+              <a href="https://drive.google.com/file/d/12U4_3DZN_qv2ur9jiwnODeYrB-hrDlPT/view?usp=sharing" class="btn btn-primary nextgen-btn js-scroll-trigger">ILF 2024</a></div>
           </div>
+         
          </div>
        </div>
   
