--- a/sponsors.html
+++ b/sponsors.html
@@ -82,6 +82,7 @@
         </div> 
         </div>
       </div>
+      <hr style="margin: 20px;">
       <div class="container">
         <h2 class="mx-auto text-center">Interested in Sponsoring ILF 2024? </h2>
       <p class="text-black">The International Leaders Forum 2024 (ILF) is the only forum where leaders of the international community can observe the dynamic workings of U.S. democracy in action.</p>
@@ -90,7 +91,7 @@
       <p class="text-black">While ILF will occur adjacent to the Democratic National Convention, NDI is a non-partisan organization and ILF's participation in the Convention is meant to be illustrative of the convention experience in the U.S. election system, not an endorsement of a particular candidate or political party. </p>
 
       <div class="text-center">
-        <a href="https://drive.google.com/file/d/1W8JwgrlkDejheCa4V-0h0mFZf0W3p5R_/view?usp=drive_link" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
+        <a href="https://drive.google.com/file/d/1IvGLftCO9q2tv6AuHFxOlK6_NuazgJ1U/view?usp=sharing" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
 
         <p class="text-white head-text"><i>For more information on sponsorship options and benefits, contact Janella Ferguson, NDI Chief Development Officer at ilf2024@ndi.org.</i></p>
       </div>
@@ -100,8 +101,7 @@
   <!-- Contact Section -->
   <section class="contact-section bg-black">
     <div class="container">
-        <h2>More information coming soon</h2>
-
+        
       <div class="row justify-content-center">
 
        <!--<div class="col-md-4 mb-3 mb-md-0">
@@ -129,17 +129,17 @@
           </div>
         </div>-->
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <!--<div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <h3 class="text-uppercase m-0">Contact</h3> 
-              <!--<hr class="my-4">-->
+              <hr class="my-4">
               <h5 class="small text-black-50"><br>Chief Development Officer</h5>
               <div class="small text-black-50">202-728-5516 <br>development.mail@ndi.org</div>
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
 
       <div class="social d-flex justify-content-center">
         <!--  <a href="#" class="mx-2">
