--- a/agenda.html
+++ b/agenda.html
@@ -201,17 +201,17 @@
           </div>
         </div>-->
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <!--<div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <h3 class="text-uppercase m-0">Contact</h3> 
-              <!--<hr class="my-4">-->
+              <hr class="my-4">
               <h5 class="small text-black-50"><br>Chief Development Officer</h5>
               <div class="small text-black-50">202-728-5516 <br>development.mail@ndi.org</div>
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
 
       <div class="social d-flex justify-content-center">
         <!--<a href="#" class="mx-2">
