--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
       <div class="mx-auto text-center">
         <!--<h2 class="text-black mx-auto text-uppercase">Welcome to the 2024 International Leaders Forum (ILF)</h2>-->
-        <a href="https://youtu.be/cOXzBTKswrs?si=lmgK0t5Ta8p1MdZ0" class="btn btn-primary learn-btn js-scroll-trigger">Learn More</a>
+        <a href="about.html" class="btn btn-primary learn-btn js-scroll-trigger">Learn More</a>
         <br>
         <p class="text-white head-text"><i>Furthering Democracy Through Observation, Reflection and Dialogue</i></p>
       </div>
