removed past agenda from tabs

--- a/agenda.html
+++ b/agenda.html
@@ -78,7 +78,7 @@
                 <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-day-three" role="tab" aria-controls="v-pills-messages" aria-selected="false">Wednesday, August 21, 2024</a>
                 <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-day-four" role="tab" aria-controls="v-pills-settings" aria-selected="false">Thursday, August 22, 2024</a>
                 <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-day-five" role="tab" aria-controls="v-pills-settings" aria-selected="false"></a>
-                <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-past-agenda" role="tab" aria-controls="v-pills-home" aria-selected="true">Past Agenda</a>    
+                <!--<a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-past-agenda" role="tab" aria-controls="v-pills-home" aria-selected="true">Past Agenda</a>-->    
                 </div>
               
               </div>
