adjusting all pages with the same size

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
 
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section class=" contact-section bg-black">
     <div class="container">
+      <div class="row">   
+        <div class="col-lg-8 mx-auto">
       <h1 class="mx-auto text-center">INTERNATIONAL LEADERS FORUM (ILF)</h1>
       <h2 class="mx-auto text-center">December 19-22 </h2>
       <h3 class="mx-auto text-center">Chicago, Illinois</h3>
@@ -127,10 +129,10 @@
         </a>
         <a href="#" class="mx-2">
           <span class="fab fa-facebook-f"></span>
-        </a>
+        </a>-->
       </div>
 
-    </div>-->
+    </div>
   </section>
 
   <!-- Footer -->
