--- a/sponsors.html
+++ b/sponsors.html
@@ -62,7 +62,10 @@
     </div>
   </header>
 
- 
+  <section class=" contact-section bg-black">
+    <div class="container">
+      <div class="row">   
+        
       <!-- Sponsors One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-sm-3">
@@ -83,7 +86,7 @@
         </div>
       </div>
       <hr style="margin: 20px;">
-      <div class="container">
+      <div class="col-lg-8 mx-auto">
         <h2 class="mx-auto text-center">Interested in Sponsoring ILF 2024? </h2>
       <p class="text-black">The International Leaders Forum 2024 (ILF) is the only forum where leaders of the international community can observe the dynamic workings of U.S. democracy in action.</p>
       <p class="text-black">This gathering of global leaders is a rare opportunity to interface with such a broadly diverse set of stakeholders, thought leaders, and decision-makers. National and global corporations and organizations such as yours will have the chance to engage with the very people responsible for economic and political decision-making, creating global opportunities, and supporting democratic values.</p>
@@ -95,8 +98,9 @@
 
         <p class="text-white head-text"><i>For more information on sponsorship options and benefits, contact Janella Ferguson, NDI Chief Development Officer at ilf2024@ndi.org.</i></p>
       </div>
-
-    </section>   
+      </div>
+    </div>
+  </section>   
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">
