adding new sponsor logos and adjusting size

--- a/sponsors.html
+++ b/sponsors.html
@@ -83,6 +83,15 @@
         <div class="col-sm-3">
           <img class="img-fluid" src="img/swiss.png" alt="Swiss logo" id="sponsor"> 
         </div> 
+        <div class="col-sm-3">
+          <img class="img-fluid" src="img/microsoft.jpg" alt="Microsoft logo" id="sponsor"> 
+        </div> 
+        <div class="col-sm-3">
+          <img class="img-fluid" src="img/US_globale.png" alt="Swiss logo" id="sponsor"> 
+        </div> 
+        <div class="col-sm-2">
+          <img class="img-fluid" src="img/WithHonorAction.jpeg" alt="Swiss logo" id="sponsor" style="margin-left: 45px;"> 
+        </div> 
         </div>
       </div>
       <hr style="margin: 20px;">
@@ -94,7 +103,7 @@
       <p class="text-black">While ILF will occur adjacent to the Democratic National Convention, NDI is a non-partisan organization and ILF's participation in the Convention is meant to be illustrative of the convention experience in the U.S. election system, not an endorsement of a particular candidate or political party. </p>
 
       <div class="text-center">
-        <a href="https://drive.google.com/file/d/1IvGLftCO9q2tv6AuHFxOlK6_NuazgJ1U/view?usp=sharing" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
+        <a href="https://drive.google.com/file/d/1G74FhAtSUGR0T9BwO8WUiuuijC-1clv1/view?usp=drive_link" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
 
         <p class="text-white head-text"><i>For more information on sponsorship options and benefits, contact Janella Ferguson, NDI Chief Development Officer at ilf2024@ndi.org.</i></p>
       </div>
