adjusting size on Swiss logo to line up with other logos on the row

--- a/sponsors.html
+++ b/sponsors.html
@@ -81,7 +81,7 @@
           <img class="img-fluid" src="img/lufthansa.png" alt="Lufthansa logo" id="sponsor">
         </div> 
         <div class="col-sm-3">
-          <img class="img-fluid" src="img/swiss.png" alt="Swiss logo" id="sponsor"> 
+          <img class="img-fluid" src="img/swiss.png" alt="Swiss logo" id="sponsor" style="margin-top: 15px;"> 
         </div> 
         <div class="col-sm-3">
           <img class="img-fluid" src="img/microsoft.jpg" alt="Microsoft logo" id="sponsor"> 
