Updating the dates for the agenda page

--- a/agenda.html
+++ b/agenda.html
@@ -75,25 +75,25 @@
           <p class="mx-auto text-center"><i>Agenda updates and session descriptions will appear here as they take shape.</i></p>
 
                  <div class="agenda-box">
-                    <h2>8/19</h2> 
+                    <h2>Monday, Aug 19</h2> 
                     <ul class="list">
                       <li>5:00pm Opening Reception and Watch Party</li>
                      </ul>
-                    <h2>8/20</h2> 
+                    <h2>Tuesday, Aug 20</h2> 
                     <ul class="list">
                     <li>10:00am Panel | DNC Convention and Role of Political Parties </li> 
                     <li>12:00pm Women in Politics Luncheon</li>
                     <li>2:00pm Panel | Political Trends Influencing U.S. Voters</li>
                     <li>5:00pm Watch Party</li>
                     </ul>
-                    <h2>8/21</h2> 
+                    <h2>Wednesday, Aug 21</h2> 
                     <ul class="list">
                       <li>10:00am Panel | Information Landscape: Views of Reporters Covering the Campaigns</li> 
                         <li>12:00pm Next Generation Leaders Luncheon</li>
                         <li>2:00pm Panel | Election Campaign Dynamics: Getting Out the Vote</li>
                         <li>5:00pm Watch Party</li>
                      </ul>
-                    <h3>8/22</h3> 
+                    <h3>Thursday, Aug 22</h3> 
                     <ul class="list">
                       <li>10:00am Panel | U.S. Foreign Policy 2025 and Beyond</li> 
                       <li>12:00pm Closing ILF Luncheon | Daimler Global State of Democracy</li>
