Making a title adjustment for Thursday, Aug 2024

--- a/agenda.html
+++ b/agenda.html
@@ -96,7 +96,7 @@
                     <h3>Thursday, Aug 22</h3> 
                     <ul class="list">
                       <li>10:00am Panel | U.S. Foreign Policy 2025 and Beyond</li> 
-                      <li>12:00pm Closing ILF Luncheon | Daimler Global State of Democracy</li>
+                      <li>12:00pm Closing ILF Luncheon </li>
                       <li>2:00pm Panel | Technology and AI in Elections</li>
                       <li>5:00pm Closing Night Watch Party</li>
                      </ul>
