updating sponsors page with new sponsors and sponsor names for March update

--- a/agenda.html
+++ b/agenda.html
@@ -96,8 +96,8 @@
                     <h3>Thursday, Aug 22</h3> 
                     <ul class="list">
                       <li>10:00am Panel | U.S. Foreign Policy 2025 and Beyond</li> 
-                      <li>12:00pm Closing ILF Luncheon </li>
-                      <li>2:00pm Panel | Technology and AI in Elections</li>
+                      <li>11:45am Panel | Technology and AI in Elections</li>
+                      <li>1:30pm Closing ILF Luncheon</li>
                       <li>5:00pm Closing Night Watch Party</li>
                      </ul>
                 </div>
