--- a/agenda.html
+++ b/agenda.html
@@ -66,7 +66,7 @@
     
   <!-- PAST Agenda Section -->
     
-    <section class="">   
+    <section class="agenda-box ">   
       <div class="container">
         <div class="row">   
           <div class="col-lg-8 mx-auto">
