updating agenda page

--- a/agenda.html
+++ b/agenda.html
@@ -74,7 +74,7 @@
           
           <p class="mx-auto text-center"><i>Agenda updates and session descriptions will appear here as they take shape.</i></p>
 
-                 <div class="agenda-box">
+                 <div class="agenda-box container">
                     <h2>Monday, Aug 19</h2> 
                     <ul class="list">
                       <li>5:00pm Opening Reception and Watch Party</li>
