Updated Sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -120,7 +120,18 @@
         <div class="col-lg-2">
           <p class="mx-auto text-center">Robert and Debra Liberatore</p>
         </div>  
-        
+        <div class="col-lg-2">
+          <p class="mx-auto text-center"></p>
+        </div> 
+        <div class="col-lg-3">
+          <p class="mx-auto text-center">The Hon. Nancy Rubin</p>
+        </div> 
+        <div class="col-lg-3">
+          <p class="mx-auto text-center">Harriett C. Babbitt</p>
+        </div> 
+        <div class="col-lg-3">
+          <p class="mx-auto text-center">Frank M. "Rusty" Conner, III</p>
+        </div> 
       </div>
       
       <hr style="margin: 20px; width: 100%;">
@@ -132,7 +143,7 @@
       <p class="text-black">While ILF will occur adjacent to the Democratic National Convention, NDI is a non-partisan organization and ILF's participation in the Convention is meant to be illustrative of the convention experience in the U.S. election system, not an endorsement of a particular candidate or political party. </p>
 
       <div class="text-center">
-        <a href="https://drive.google.com/file/d/1G74FhAtSUGR0T9BwO8WUiuuijC-1clv1/view?usp=drive_link" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
+        <a href="https://drive.google.com/file/d/1QT8fdJgb9U0_xaTudcpVrWT7xxJNeCZv/view?usp=drive_link" class="btn btn-primary nextgen-btn js-scroll-trigger">Download Sponsor Benefits Package</a></div>
 
         <p class="text-white head-text"><i>For more information on sponsorship options and benefits, contact Janella Ferguson, NDI Chief Development Officer at ilf2024@ndi.org.</i></p>
       </div>
