--- a/agenda.html
+++ b/agenda.html
@@ -82,25 +82,25 @@
                      </ul>
                     <h2>Tuesday, Aug 20</h2> 
                     <ul class="list">
-                    <li>10:00am Panel | DNC Convention and Role of Political Parties </li> 
-                    <li>12:00pm Women in Politics Luncheon</li>
-                    <li>2:00pm Panel | Political Trends Influencing U.S. Voters</li>
+                    <li>9:30am - 11:00am Panel | DNC Convention and Role of Political Parties </li> 
+                    <li>11:30am - 1:30pm Women in Politics Luncheon</li>
+                    <li>2:00pm - 3:30pm Panel | Political Trends Influencing U.S. Voters</li>
                     <li>5:00pm Networking Dinner</li>
                     <li>8:00pm Opening Reception and Watch Party</li>
                     </ul>
                     <h2>Wednesday, Aug 21</h2> 
                     <ul class="list">
-                      <li>10:00am Panel | Information Landscape: Views of Reporters Covering the Campaigns</li> 
-                        <li>12:00pm Next Generation Leaders Luncheon</li>
-                        <li>2:00pm Panel | Election Campaign Dynamics: Getting Out the Vote</li>
+                      <li>9:30am - 11:00am Panel | Information Landscape: Views of Reporters Covering the Campaigns</li> 
+                        <li>11:30am - 1:30pm Next Generation Leaders Luncheon</li>
+                        <li>2:00pm - 3:30pm Panel | Election Campaign Dynamics: Getting Out the Vote</li>
                         <li>5:00pm Networking Dinner</li>
                         <li>8:00pm Opening Reception and Watch Party</li>
                      </ul>
                     <h3>Thursday, Aug 22</h3> 
                     <ul class="list">
-                      <li>10:00am Panel | U.S. Foreign Policy 2025 and Beyond</li> 
-                      <li>11:45am Panel | Technology and AI in Elections</li>
-                      <li>1:30pm Closing ILF Luncheon</li>
+                      <li>9:30am - 11:00am Panel | U.S. Foreign Policy 2025 and Beyond</li> 
+                      <li>11:15am - 12:45am Panel | Technology and AI in Elections</li>
+                      <li>1:00pm - 3:30pm Closing ILF Luncheon</li>
                       <li>5:00pm Networking Dinner</li>
                       <li>8:00pm Convention Watch Party</li>
                      </ul>
