--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="sponsors.html">Sponsors</a>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="nextgen.html">NextGen</a>
-            </li>
+            </li>-->
           </li>
         </ul>
       </div>
