Updating sponsor page

--- a/sponsors.html
+++ b/sponsors.html
@@ -98,6 +98,9 @@
         <div class="col-sm-2">
           <img class="img-fluid" src="img/IMI_logo_primary_forweb.png" alt="Swiss logo" id="sponsor" style="margin-left: 45px;"> 
         </div> 
+        <div class="col-sm-2">
+          <img class="img-fluid" src="img/Amgen-Logo.jpeg" alt="Swiss logo" id="sponsor" style="margin-left: 45px;"> 
+        </div> 
         </div>
 
         <br>
